[gd_scene load_steps=23 format=3 uid="uid://bg5qj3j3mtkkj"]

[ext_resource type="Texture2D" uid="uid://cucvarhji6lj5" path="res://assets/sprites_inimigos/characters/slime.png" id="1_0k54l"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_llk4v"]
[ext_resource type="Texture2D" uid="uid://bdpiea477jn3s" path="res://assets/NovoInimigo/EnemySkull.png" id="3_niewl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aauvd"]
atlas = ExtResource("1_0k54l")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tio5m"]
atlas = ExtResource("1_0k54l")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t05jh"]
atlas = ExtResource("1_0k54l")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6few"]
atlas = ExtResource("1_0k54l")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovvbd"]
atlas = ExtResource("1_0k54l")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olevl"]
atlas = ExtResource("3_niewl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y738d"]
atlas = ExtResource("3_niewl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lnfj"]
atlas = ExtResource("3_niewl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1bmn"]
atlas = ExtResource("3_niewl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obtjk"]
atlas = ExtResource("3_niewl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s23v"]
atlas = ExtResource("3_niewl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ob4n"]
atlas = ExtResource("3_niewl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb4pm"]
atlas = ExtResource("3_niewl")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeob8"]
atlas = ExtResource("3_niewl")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1v03"]
atlas = ExtResource("3_niewl")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xicyu"]
atlas = ExtResource("3_niewl")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ok5o8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aauvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tio5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t05jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6few")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovvbd")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olevl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y738d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1bmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obtjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s23v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ob4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb4pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeob8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1v03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xicyu")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvw7e"]
size = Vector2(104, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_3hdtn"]
radius = 11.0

[node name="enemy" type="RigidBody2D"]
lock_rotation = true
script = ExtResource("1_llk4v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_ok5o8")
animation = &"idle"
autoplay = "idle"

[node name="detection_area" type="Area2D" parent="."]
light_mask = 18
visibility_layer = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_kvw7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_3hdtn")

[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
